fixes dialog display on mobile partially

--- a/public/style.css
+++ b/public/style.css
@@ -48,8 +48,6 @@ body {
   padding: 0rem 2rem 2rem 2rem;
   top: 100px;
   bottom: 100px;
-  left: 250px;
-  right: 250px;
   z-index: 100;
 }
 
